# Codexify

./: .gitignore  LICENSE  README.md  pyproject.toml
codexify/: __init__.py  cli.py  main.py  types.py
codexify/core/: common.py  content_compiler.py  dependencies.py  file_system.py  go_utils.py  tree_builder.py
