[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexify"
version = "0.1.0"
description = "A code snippet generator for documentation"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "Rémi Viau", email = "remi.viau@gmail.com" },
]
dependencies = [
  "click>=7.0",
  "requests>=2.25.1",
]
keywords = ["documentation", "code", "snippets"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent",
]

[project.scripts]
codexify = "codexify.cli:run_cli"

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "black>=22.0",
  "flake8>=4.0",
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["codexify*"]
exclude = ["tests*", "examples*"]
