[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexify"
version = "0.1.0"
description = "Transform your codebases into intelligent, structured context, perfectly optimized for Large Language Models (LLMs)."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Rémi Viau", email = "remi.viau@gmail.com"},
]
dependencies = [
  "PyYAML>=5.0",
  "tiktoken>=0.3.0",
  "gitignore-parser>=0.1.0",
]
keywords = [
    "llm",
    "context",
    "code analysis",
    "developer tools",
    "cli",
    "python",
    "code generation",
    "text processing"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Text Processing :: Indexing",
]

[project.urls]
Homepage = "https://github.com/r-via/codexify"
Repository = "https://github.com/r-via/codexify"

[project.scripts]
codexify = "codexify.cli:run_cli"

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "black>=22.0",
  "flake8>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["codexify*"]
exclude = ["tests*"]